<resources>
    <string name="app_name" translatable="false">Smart Pantry</string>
    <string name="emailText" translatable="false">Email</string>
    <string name="passwordText" translatable="false">Password</string>
    <string name="repeatPasswordText">Conferma la password</string>
    <string name="usernameText">Nome utente</string>
    <string name="loginBtn">Accedi</string>
    <string name="connectionError">Controlla la tua connessione di rete e riprova.</string>
    <string name="loginError">Controlla le credenziali e riprova</string>
    <string name="usernameRegistrationError">Inserisci un nome utente</string>
    <string name="emailRegistrationError">Inserisci una mail valida</string>
    <string name="passwordRegistrationError">Inserisci una password</string>
    <string name="confirmPasswordRegistrationError">Conferma la password</string>
    <string name="passwordMatchRegistrationError">La password non coincide</string>
    <string name="alreadyExistsUserError">Sembra che l\'email sia già associata ad un altro account</string>
    <string name="genericError">Si è verificato un errore, riprova per favore</string>
    <string name="passwordMissingErrorText">Inserisci la tua password</string>
    <string name="emailMissingErrorText">Inserisci la tua email</string>
    <string name="registerBtn">Registrati</string>
    <string name="rememberCheckBox">Ricordati di me</string>
    <string name="pantryTitle">La tua dispensa</string>
    <string name="optionsText">Opzioni</string>
    <string name="prodText">Prodotti</string>
    <string name="recipesText">Ricettario</string>
    <string name="shoppingText">Spesa</string>
    <string name="searchText">Cerca un prodotto</string>
    <string name="foundProductsTitle">Risultati per\n</string>
    <string name="noProductsFoundText">Nessun prodotto trovato.\n\nPuoi aggiungerne uno nuovo tramite il pulsante.</string>
    <string name="scanResultTitleText">Risultato della scansione</string>
    <string name="scanResultDescrText">Se il codice a barre non è corretto puoi riprovare a scannerizzarlo o in alternativa modificarlo manualmente</string>
    <string name="retryBtnText">Riprova</string>
    <string name="confirmBtnText">Conferma</string>
    <string name="retryToastText">Riprova</string>
    <string name="listProductBarcodeText">Codice prodotto:&#160;</string>
    <string name="listProductCreatedText">Creato:\n</string>
    <string name="listProductUpdatedText">Ultimo aggiornamento:\n</string>
    <string name="addProductTitle">Codice a barre del prodotto:\n</string>
    <string name="addProductNameLabel">Nome del prodotto:</string>
    <string name="addProductDescriptionLabel">Descrizione del prodotto:</string>
    <string name="addProductToPantryLabel">Aggiungi il prodotto alla dispensa</string>
    <string name="addProductExpirationDateLabel">Data di scadenza:</string>
    <string name="addProductBtn">Aggiungi</string>
    <string name="addProductNameError">Inserisci un nome</string>
    <string name="addProductDescriptionError">Inserisci una descrizione</string>
    <string name="addProductQuantityError">Inserisci una quantità positiva</string>
    <string name="addProductQuantity">Quantità:</string>
    <string name="pantryItemCardExpire">"Scade: "</string>
    <string name="manualEntryButtonText">Aggiungi un prodotto\n manualmente</string>
    <string name="ownedProductsHeader">I tuoi prodotti</string>
    <string name="otherProductsHeader">Tutti i prodotti</string>
    <string name="previewVoteBtn">Vota</string>
    <string name="previewVoteLabel">Vota il\nprodotto</string>
    <string name="voteFirstError">Devi prima valutare il prodotto.</string>
    <string name="alreadyRatedProduct">Sembra che tu abbia già valutato \nquesto prodotto.</string>
    <string name="yourVote">Il tuo\nvoto</string>
    <string name="manualEntryTitle">Digita il codice a barre del prodotto che vuoi aggiungere</string>
    <string name="deleteText">Elimina</string>
    <string name="modifyText">Modifica</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="settingsText">Impostazioni</string>
    <string name="accountText" translatable="false">Account</string>
    <string name="clearPantry">Pulisci la dispensa</string>
    <string name="deleteProducts">Elimina tutti i prodotti salvati</string>
    <string name="errorRestartApp">Si è verificato un errore, chiudi l\'app e prova di nuovo.</string>
    <string name="alreadyRegisteredText">Sei già registrat*? Clicca qui per accedere.</string>
    <string name="noProductAddedError">Il prodotto non è stato aggiunto al server per mancanza di connessione.</string>
    <string name="warningText">Attenzione!</string>
    <string name="dropTablesText">Eseguendo l\'accesso da un nuovo account, tutti i tuoi dati locali \nandranno persi per sempre! (prodotti nella dispensa, preferiti, ecc…) \n \n Sei sicuro di voler eseguire l\'accesso come nuovo utente?</string>
    <string name="yesText">Si</string>
    <string name="noText">No</string>
    <string name="cancelText">Annulla</string>
    <string name="deleteItemsFromPantry">Stai per eliminare tutti i prodotti nella dispensa, potrai comunque visualizzarli e gestirli dalla Pagina Prodotti, tuttavia l\'operazione è irreversibile.  \n\nPer confermare digita la tua email nel campo di testo e conferma.</string>
    <string name="deleteAllProducts">Sei sicuro? L\'operazione è irreversibile e perderai tutte le informazioni sui prodotti salvati.   \n\nPer confermare digita la tua email nel campo di testo e conferma.</string>
    <string name="allProductsDeletedFromPantry">Tutti i prodotti sono stati rimossi dalla dispensa.</string>
    <string name="allProductsDeleted">Tutti i prodotti sono stati eliminati con successo.</string>
    <string name="okText" translatable="false">OK</string>
    <string name="applyText">Applica</string>
    <string name="favoritesText">Preferiti</string>
    <string name="iconsText">Icona</string>
    <string name="quantityText">Quantità</string>
    <string name="expirationText">Scadenza</string>
    <string name="nameText">Nome</string>
    <string name="ASCText">Ordine Crescente</string>
    <string name="DESCText">Ordine Decrescente</string>
    <string name="orderText">Ordinamento</string>
    <string name="saveApplyText">Salva e Applica</string>
    <string name="expireProductNotificationChannelName">Notifiche prodotti in scadenza</string>
    <string name="expireProductNotificationChannelDescription">Questo canale di notifica serve ad avvisarti quando un prodotto è in scadenza</string>
    <string name="expireProductNotificationTitle">Sembra che uno o più prodotti siano in scadenza.</string>
    <string name="expireProductNotificationDescription">Controlla la tua dispensa e gestici</string>
    <string name="pluralArticle">i</string>
    <string name="singularArticle">il</string>
    <string name="productText">prodotto.</string>
    <string name="productsText">prodotti.</string>
    <string name="productsTitle">I tuoi prodotti</string>
    <string name="productNotInPantry">NON IN DISPENSA</string>
    <string name="productInPantry">IN DISPENSA</string>
    <string name="updateText">Aggiorna Prodotto</string>
    <string name="deleteProduct">Sei sicuro di voler eliminare questo prodotto?</string>
    <string name="shoppingTitleText">Lista della Spesa</string>
    <string name="updateShoppingList">Aggiorna</string>
    <string name="addToShoppingTitle">Aggiungere alla lista della spesa?</string>
    <string name="addToShoppingDescription">Inserisci la quantità da aggiungere alla lista della spesa.</string>
    <string name="closeText">Chiudi</string>
    <string name="addShoppingBtn">Aggiungi</string>
    <string name="dontAddToShoppingBtn">Non Aggiungere</string>
    <string name="deleteProductFromServer">Stai per eliminare questo prodotto per sempre, sei sicuro?</string>
    <string name="manageNotifications">Gestione notifiche</string>
    <string name="notificationManageTitle">Gestione Notifiche</string>
    <string name="notificationExpiredOpt">Avvisami quando scade un prodotto.</string>
    <string name="notificationFavoriteOpt">Avvisami se manca uno dei miei prodotti preferiti nella dispensa.</string>
    <string name="missingFavNotificationDescription1">dei tuoi articoli preferiti non </string>
    <string name="is">è</string>
    <string name="are">sono</string>
    <string name="missingFavNotificationDescription2"> presente in dispensa.</string>
    <string name="favProductNotificationTitle">in dispensa mancano alcuni dei tuoi prodotti preferiti</string>
    <string name="favProductNotificationChannelName">Notifiche prodotti preferiti non in dispensa</string>
    <string name="favProductNotificationChannelDescription">Questo canale di notifica serve ad avvisarti quado uno o più dei tuoi prodotti preferiti non è nella tua dispensa.</string>
    <string name="heyText" translatable="false">Hey, </string>
    <string name="showOnlyMissingProds">Mostra solo i prodotti non in dispensa</string>
    <string name="productAlreadySaved">Il codice a barre che cerchi risulta già associato ad uno dei tuoi prodotti salvati.\nClicca uno dei prodotti sottostanti per visualizzarli nella pagina prodotti.</string>
    <string name="searchAnywayText">Cercare comunque?</string>
    <string name="productDeletedError">Si è verificato un errore durante l\'eliminazione del prodotto. Riprovare.</string>
    <string name="selectIcon">Seleziona un\'icona</string>
    <string name="selectText">Seleziona</string>
    <string name="scanFrame">Immagine barcode</string>
    <string name="shoppingListIcon">Icona lista della spesa</string>
    <string name="productIcon">Icona del prodotto</string>
    <string name="expandArrow">freccia di espansione</string>
    <string name="dateHint">Scadenza</string>
    <string name="deleteDateIcon">Cancella la data</string>
    <string name="quantityHint" translatable="false">x</string>
    <string name="yourProducts">I tuoi prodotti</string>
    <string name="deleteProductIcon">Elimina prodotto icona</string>
    <string name="backButtonIcon">Icona indietro</string>
    <string name="barcodeHint" translatable="false">0000 0000 0000</string>
    <string name="sortingIcon">Icona di ordinamento</string>
    <string name="barcodeError">Il codice a barre non può essere vuoto</string>
    <string name="alreadySavedProduct">Hai già salvato questo prodotto.</string>
    <string name="recipesTitle">Ricettario</string>
    <string name="searchRecipeText">Cerca una ricetta...</string>
    <string name="recipesCount">%1$d Ricette trovate.</string>
    <string name="ingredientsCount">%1$d%% degli ingredienti</string>
    <string name="mainIngredient">A base di: %1$s</string>
    <string name="procedureText">Procedimento:</string>
    <string name="ingredientsText">Ingredienti:</string>
    <string name="noProductsForRecipes">Aggiungi dei prodotti alla tua dispensa per visualizzare delle ricette</string>
    <string name="portions">Porzioni: %1$s</string>
    <string name="recipeNotes">\n\nNote:\n%1$s</string>
    <string name="noRecipes">Nessuna ricetta trovata.</string>
    <string name="bestMatchResult" translatable="false">Questi sono i prodotti che più assomigliano al tuo, seleziona quelli che corrispondono al tuo e conferma</string>
    <string name="reccRatingText" translatable="false">Al fine di valutare il sistema che ti suggerisce delle ricette, puoi votare la ricetta che ti è stata consigliata indicando il numero di ingredienti che effettivamente possiedi.</string>
</resources>